--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <h1>Пустоваров Артур</h1>
+        <h1>Пустоваров Арту</h1>
         <h2>Студент Луганского колледжа строительства, экономики и права</h2>
 
         <hr>
@@ -31,4 +31,5 @@
         </section>
     </main>
 </body>
+
 </html>
